@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jul 2013; Michael Weber <xmw@gentoo.org>
+  raspberrypi-loader-0_p20130705-r1.ebuild,
+  raspberrypi-loader-0_p20130705.ebuild:
+  restrict binchecks
+
 *raspberrypi-loader-0_p20130705-r1 (11 Jul 2013)
 
   11 Jul 2013; Michael Weber <xmw@gentoo.org>
